# YPScanLite

./: Cargo.toml  README.md
files/config/: hash-exclusions.cfg  path-exclusions.cfg
files/iocs/: hash-iocs.eioc
files/yara/: ByteCode.MSIL.Backdoor.AgentRacoon.eyar  ByteCode.MSIL.Backdoor.AsyncRAT.eyar  ByteCode.MSIL.Backdoor.LimeRAT.eyar  ByteCode.MSIL.Backdoor.Menorah.eyar  ByteCode.MSIL.Backdoor.NjRAT.eyar  ByteCode.MSIL.Backdoor.OrcusRAT.eyar  ByteCode.MSIL.Ransomware.Apis.eyar  ByteCode.MSIL.Ransomware.ChupaCabra.eyar  ByteCode.MSIL.Ransomware.Cring.eyar  ByteCode.MSIL.Ransomware.Dusk.eyar  ByteCode.MSIL.Ransomware.EAF.eyar  ByteCode.MSIL.Ransomware.Eternity.eyar  ByteCode.MSIL.Ransomware.Fantom.eyar  ByteCode.MSIL.Ransomware.GhosTEncryptor.eyar  ByteCode.MSIL.Ransomware.Ghostbin.eyar  ByteCode.MSIL.Ransomware.GoodWill.eyar  ByteCode.MSIL.Ransomware.HarpoonLocker.eyar  ByteCode.MSIL.Ransomware.Hog.eyar  ByteCode.MSIL.Ransomware.Invert.eyar  ByteCode.MSIL.Ransomware.Janelle.eyar  ByteCode.MSIL.Ransomware.Khonsari.eyar  ByteCode.MSIL.Ransomware.McBurglar.eyar  ByteCode.MSIL.Ransomware.Moisha.eyar  ByteCode.MSIL.Ransomware.Namaste.eyar  ByteCode.MSIL.Ransomware.Oct.eyar  ByteCode.MSIL.Ransomware.Pacman.eyar  ByteCode.MSIL.Ransomware.PoliceRecords.eyar  ByteCode.MSIL.Ransomware.Povlsomware.eyar  ByteCode.MSIL.Ransomware.Retis.eyar  ByteCode.MSIL.Ransomware.TaRRaK.eyar  ByteCode.MSIL.Ransomware.Thanos.eyar  ByteCode.MSIL.Ransomware.TimeCrypt.eyar  ByteCode.MSIL.Ransomware.TimeTime.eyar  ByteCode.MSIL.Ransomware.Venom.eyar  Linux.Backdoor.GTPDOOR.eyar  (+943 more)
src/: main.rs
(+12 files in other folders)
