[package]
name = "YPScanLite"
version = "0.1.0"
edition = "2021"

[dependencies]
yara-x = "0.10"
owo-colors = "4.1"
enable-ansi-support = "0.2"
indicatif = "0.17"
chrono = "0.4"
walkdir = "2.5"
sysinfo = "0.32"
regex = "1.11"
file-format = { version = "0.25", features = ["reader"]}
concurrent-queue = "2.5"
fernet = "0.2"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
clap = { version = "4.5", features = ["cargo"]}
clap-cargo = "0.14"
local-encoding = "0.2"
queue-file = "1"

[target.'cfg(target_os = "windows")'.dependencies]
codesign-verify = "0.1"

[build-dependencies]
winresource = "0.1"